ms-catalog/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ms-catalog
  namespace: client-ms-catalog
spec:
  rules:
    - host: catalog.luuna.mx
      http:
        paths:
          - backend:
              service:
                name: ms-catalog
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
